contact us changes

--- a/contact-us-2.html
+++ b/contact-us-2.html
@@ -175,12 +175,7 @@
             </div>
           </div>
           <div class="col-md-7">
-            <div class="get-in-touch get-in-touch-style2 booking-form">
-              <img
-                src="images/contact-form-bg.png"
-                class="img-fluid get-in-bg"
-                alt="#"
-              />
+            <div class="get-in-touch get-in-touch-style2">
               <h3>Schedule an Appointment</h3>
               <form
                 action="https://api.web3forms.com/submit"
