--- a/dermatology.html
+++ b/dermatology.html
@@ -174,7 +174,7 @@
 
               <h5><i class="fas fa-caret-right"></i> Acne Removal</h5>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <p>
                     Acne, pimples or zits are more common among teenagers, but
                     they are increasingly becoming prominent in adults and
@@ -195,7 +195,7 @@
                     suffering from different kinds of acne.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
@@ -270,7 +270,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <h5>
                     <i class="fas fa-caret-right"></i> Pediatric Dermatology
                   </h5>
@@ -293,7 +293,7 @@
                     ointments, light therapy and medication can offer relief.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
@@ -378,7 +378,9 @@
                       Are you feeling Skin Problems?
                       <span>Free talk with us for support.</span>
                     </h3>
-                    <a href="contact-us-2.html" class="custom-btn btn-16">Know More</a>
+                    <a href="contact-us-2.html" class="custom-btn btn-16"
+                      >Know More</a
+                    >
                   </div>
                   <div class="image-1">
                     <img
