--- a/laser.html
+++ b/laser.html
@@ -178,7 +178,7 @@
               <h3 class="my-5">Procedure</h3>
 
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <p>
                     The primary principle behind laser hair removal is selective
                     photothermolysis (SPTL), the matching of a specific
@@ -211,7 +211,7 @@
                     with dark skin with some success.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
