--- a/cosmetology.html
+++ b/cosmetology.html
@@ -181,7 +181,7 @@
                 pigmentation, Under eye pigmentation, Dark lips
               </h5>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <p>
                     A chemical peel is a procedure in which a chemical solution
                     is applied to the skin to remove the top layers. The skin
@@ -205,7 +205,7 @@
                     to get plumper and smoother.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
@@ -251,7 +251,7 @@
                         height="100%"
                         clip-path="url(#mask)"
                         preserveAspectRatio="xMidYMid slice"
-                        href="images/ear.png"
+                        href="images/Ear.jpg"
                       />
                     </svg>
                   </div>
@@ -285,7 +285,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <h5><i class="fas fa-caret-right"></i> Skin Biopsy</h5>
                   <p>
                     A skin biopsy is a procedure in which a doctor cuts and
@@ -313,7 +313,7 @@
                     hear it called collagen induction therapy.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 order-1 order-md-2 my-md-n5">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
