--- a/gastro.html
+++ b/gastro.html
@@ -177,7 +177,7 @@
 
               <h5><i class="fas fa-caret-right"></i> Colorectal diseases</h5>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <p>
                     Colorectal and anal diseases are extremely common,
                     particularly in developed countries. Hemorrhoids are a
@@ -198,7 +198,7 @@
                   </p>
                 </div>
 
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
@@ -270,7 +270,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <h5>
                     <i class="fas fa-caret-right"></i>Gastrointestinal problems
                   </h5>
@@ -294,7 +294,7 @@
                     the liver, gallbladder and bile ducts.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 my-md-n5 order-1 order-md-2">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
