--- a/trichology.html
+++ b/trichology.html
@@ -177,7 +177,7 @@
 
               <h5><i class="fas fa-caret-right"></i> Hair Disorders</h5>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <p>
                     Hair plays an important role in our lives. The hair on our
                     head keeps us warm and acts as a cushion for our skull. Hair
@@ -200,7 +200,7 @@
                     folliculitis)
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 order-1 order-md-2 my-md-n5">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
@@ -278,7 +278,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 order-2">
                   <h5><i class="fas fa-caret-right"></i> PRP Treatment</h5>
                   <p>
                     If you’ve been losing your hair or you’re starting to notice
@@ -301,7 +301,7 @@
                     or used on its own.
                   </p>
                 </div>
-                <div class="col-md-5 my-md-n5">
+                <div class="col-md-5 order-1 order-md-2 my-md-n5">
                   <div class="floating-image">
                     <svg
                       viewBox="0 0 20 18"
