--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
                   <a
                     class="align-self-baseline"
-                    href="services.html#gastro"
+                    href="gastro.html"
                     >READ MORE</a
                   >
                 </div>
