--- a/contact-us-2.html
+++ b/contact-us-2.html
@@ -7,6 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="description"
+      content="Located at the heart of Trivandrum city, Mohan’s Skin & Gastro Care delivers world-class medical care in the dual medical disciplines of Dermatology and Gastroenterology. "
+    />
+    <meta
+      name="keywords"
+      content="skincare, skin care, gastrocare, dermatologist, dermatology, laser removal, tattoo removal, beauty, gastrology, cosmetic, cosmetologist, cosmetologist, Aesthetic science"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Google fonts -->
@@ -19,6 +27,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Contact Us - Mohan Skin and gastro Care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -86,11 +95,7 @@
 
                       <li class="nav-item">
                         <a
-                          class="
-                            nav-link
-                            btn btn-outline-primary
-                            appointment-btn-top
-                          "
+                          class="nav-link btn btn-outline-primary appointment-btn-top"
                           href="contact-us-2.html"
                           >Contact Us</a
                         >
@@ -325,14 +330,7 @@
             </div>
           </div>
           <div
-            class="
-              col-sm-12 col-md-3 col-lg-3
-              mb-5 mb-md-2
-              order-first order-md-last
-              d-flex
-              align-items-center
-              justify-content-end
-            "
+            class="col-sm-12 col-md-3 col-lg-3 mb-5 mb-md-2 order-first order-md-last d-flex align-items-center justify-content-end"
           >
             <div class="counter-btn_block">
               <a
