--- a/error.html
+++ b/error.html
@@ -7,6 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="description"
+      content="Located at the heart of Trivandrum city, Mohan’s Skin & Gastro Care delivers world-class medical care in the dual medical disciplines of Dermatology and Gastroenterology. "
+    />
+    <meta
+      name="keywords"
+      content="skincare, skin care, gastrocare, dermatologist, dermatology, laser removal, tattoo removal, beauty, gastrology, cosmetic, cosmetologist, cosmetologist, Aesthetic science"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Google fonts -->
@@ -19,6 +27,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Page not found - Mohan Skin and Gastro Care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
