--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Frequently Asked Questions - Mohan Skin and Gastro Care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -78,11 +79,7 @@
                       </li>
                       <!-- Sub Menu -->
                       <li class="nav-item">
-                        <a
-                          class="nav-link"
-                          href="services.html"
-                          role="button"
-                        >
+                        <a class="nav-link" href="services.html" role="button">
                           Services
                         </a>
                       </li>
@@ -100,11 +97,7 @@
 
                       <li class="nav-item">
                         <a
-                          class="
-                            nav-link
-                            btn btn-outline-primary
-                            appointment-btn-top
-                          "
+                          class="nav-link btn btn-outline-primary appointment-btn-top"
                           href="appointment.html"
                           >Contact Us</a
                         >
