--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Gallery - Mohan Skin and Gastro Care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -100,11 +101,7 @@
 
                       <li class="nav-item">
                         <a
-                          class="
-                            nav-link
-                            btn btn-outline-primary
-                            appointment-btn-top
-                          "
+                          class="nav-link btn btn-outline-primary appointment-btn-top"
                           href="contact-us-2.html"
                           >Contact Us</a
                         >
