--- a/services-detail.html
+++ b/services-detail.html
@@ -7,6 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="description"
+      content="Located at the heart of Trivandrum city, Mohan’s Skin & Gastro Care delivers world-class medical care in the dual medical disciplines of Dermatology and Gastroenterology. "
+    />
+    <meta
+      name="keywords"
+      content="skincare, skin care, gastrocare, dermatologist, dermatology, laser removal, tattoo removal, beauty, gastrology, cosmetic, cosmetologist, cosmetologist, Aesthetic science"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Google fonts -->
@@ -24,6 +32,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Services - Mohan skin & Gastro care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -96,11 +105,7 @@
 
                       <li class="nav-item">
                         <a
-                          class="
-                            nav-link
-                            btn btn-outline-primary
-                            appointment-btn-top
-                          "
+                          class="nav-link btn btn-outline-primary appointment-btn-top"
                           href="contact-us-2.html"
                           >Contact Us</a
                         >
@@ -519,12 +524,7 @@
             </div>
           </div>
           <div
-            class="
-              col-sm-12 col-md-3 col-lg-3
-              d-flex
-              align-items-center
-              justify-content-end
-            "
+            class="col-sm-12 col-md-3 col-lg-3 d-flex align-items-center justify-content-end"
           >
             <div class="counter-btn_block">
               <a href="contact-us-2.html" class="btn btn-success">BOOK NOW</a>
