--- a/laser.html
+++ b/laser.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/slick-theme.css" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Services - Mohan skin & Gastro care</title>
+    <title>Laser Removal - Mohan skin & Gastro care</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -96,11 +97,7 @@
 
                       <li class="nav-item">
                         <a
-                          class="
-                            nav-link
-                            btn btn-outline-primary
-                            appointment-btn-top
-                          "
+                          class="nav-link btn btn-outline-primary appointment-btn-top"
                           href="contact-us-2.html"
                           >Contact Us</a
                         >
@@ -137,19 +134,11 @@
     <!--==================== Service Detail ====================-->
     <div class="service-display-section section-top-gap-200 section-fluid-185">
       <div
-        class="
-          box-wrapper
-          section-inner-padding-145 section-inner-bg
-          container-border-radius
-        "
+        class="box-wrapper section-inner-padding-145 section-inner-bg container-border-radius"
       >
         <div class="container">
           <div
-            class="
-              row
-              align-items-center
-              justify-content-xl-evenly justify-content-xxl-between
-            "
+            class="row align-items-center justify-content-xl-evenly justify-content-xxl-between"
           >
             <div class="col-12">
               <h3>What is Laser Hair Removal?</h3>
@@ -350,12 +339,7 @@
               </div>
             </div>
             <div
-              class="
-                col-sm-12 col-md-3 col-lg-3
-                d-flex
-                align-items-center
-                justify-content-end
-              "
+              class="col-sm-12 col-md-3 col-lg-3 d-flex align-items-center justify-content-end"
             >
               <div class="counter-btn_block">
                 <a href="contact-us-2.html" class="btn btn-success">BOOK NOW</a>
